[project]
name = "pyLIDAR"
version = "0.1.0"
authors = [{name = "Paradoxdruid", email = "bonham@gmail.com"}]
readme = "README.md"
description = "Script to read LD06 LIDAR datastream and plot an updating graph of data."
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyserial",
    "matplotlib",
]
urls = [{homepage = "https://github.com/Paradoxdruid/pyLIDAR"}]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "mypy",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.mypy]
ignore_missing_imports = true
strict = true
files = "pyLIDAR/*.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
